# qal-workshop-2023

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
css/: colors.css
docs/: grover-cli.md  grover-example.md  index.md  introduction.md  setup.md
docs/css/: page_format.css
docs/javascripts/: fix_dark_mode_toggle_leftovers.js
docs/resources/qal_workshop/: CMakeLists.txt
docs/resources/qal_workshop/include/: grover_cli_tools.hpp
docs/resources/qal_workshop/src/: grover_cli.cpp  grover_example.cpp
docs/resources/setup/: setup_remote.py
grover-cli/: index.html
grover-example/: index.html
hooks/: navigation.py
introduction/: index.html
javascripts/: gtm.js  links_in_newtab.js
overrides/: main.html
prerequisites/: index.html
resources/qal_workshop/src/: grover_cli_tools.cpp
resources/setup/: setup_remote.py
search/: search_index.json
setup/: index.html
